Create delete modal fragment. * This fragment allows to have a confirm step before a delete action takes place. * Links or other elements only need the data-action and data-name set to   enable   1. confirm a textfield value matches the data-name value before the submit button is enabled   2. Do some action from data-action as GET request after that

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -2,3 +2,7 @@
 
 brand.name=PeerPub
 brand.author=Forschungszentrum Jülich GmbH
+
+# modal texts
+delete.confirm.header=Confirm deletion
+delete.confirm.text=This action cannot be undone. If you are sure to delete this item, type the red text into the field and click on "Delete".
