Relates to #56 and enables fully working attribute list. * Nicely rendered as accordion cards * Add/Edit/Delete buttons (delete uses confirmation modal)

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -3,6 +3,34 @@
 brand.name=PeerPub
 brand.author=Forschungszentrum Jülich GmbH
 
-# modal texts
+
+
+########################
+# GENERAL TERMS
+########################
+
+add=Add
+delete=Delete
+description=Description
+edit=Edit
+key=Key
+label=Label
+name=Name
+
+
+
+########################
+# MODALS
+########################
+
 delete.confirm.header=Confirm deletion
 delete.confirm.text=This action cannot be undone. If you are sure to delete this item, type the red text into the field and click on "Delete".
+
+
+
+########################
+# ADMIN
+########################
+
+# Metadata attributes
+admin.attribute.list=Metadata attributes
