AttributeAdminCtrl: view for adding and editing an attribute. * Add the basic Thymeleaf based view * Refactor Attribute class to include a NoArgsConstructor (needed for form) * Refactor AttributeAdminCtrl to include an empty Attribute in addGetForm() so   the form  variables can be set from the model. Former empty model IS NOT SUFFICIENT. * Change unit testing for addGetForm() to expect the empty attribute in the model.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -17,6 +17,12 @@ key=Key
 label=Label
 name=Name
 
+########################
+# ERRORS
+########################
+
+referable.notmatching=This does not match /^[a-zA-Z09-_]+$/
+duplicate.name=This name is already in use. Please choose another.
 
 
 ########################
@@ -34,3 +40,5 @@ delete.confirm.text=This action cannot be undone. If you are sure to delete this
 
 # Metadata attributes
 admin.attribute.list=Metadata attributes
+admin.attribute.add=New metadata attribute
+admin.attribute.edit=Edit metadata attribute
