--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -18,11 +18,17 @@ label=Label
 name=Name
 
 ########################
-# ERRORS
+# ERRORS AND SUCCESS MSG
 ########################
 
-referable.notmatching=This does not match /^[a-zA-Z09-_]+$/
 duplicate.name=This name is already in use. Please choose another.
+add.success=Successfully added.
+edit.notfound=The item to edit has not been found.
+edit.failed=Updating the item failed.
+delete.success=Successfully deleted.
+delete.failed=Deleting the item failed.
+exception.unknown=Unknown exception hit. Please consult an administrator.
+
 
 
 ########################
