Add administrative list view for DocType including integration test for DocTypeAdminCtrl

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -10,12 +10,19 @@ brand.author=Forschungszentrum Jülich GmbH
 ########################
 
 add=Add
+attribute=Attribute
+defaultValue=Default value
 delete=Delete
 description=Description
+displayName=Display name
 edit=Edit
 key=Key
 label=Label
+legend=Legend
+modus=Modus
 name=Name
+
+
 
 ########################
 # ERRORS AND SUCCESS MSG
@@ -48,3 +55,28 @@ delete.confirm.text=This action cannot be undone. If you are sure to delete this
 admin.attribute.list=Metadata attributes
 admin.attribute.add=New metadata attribute
 admin.attribute.edit=Edit metadata attribute
+admin.attribute.optional=Optional attribute
+admin.attribute.mandatory=Mandatory attribute
+admin.attribute.noDefault=No default value set
+
+# Document types
+admin.doctype.list=Document types
+admin.doctype.system=System type. Cannot be deleted, only attributes may be edited.
+admin.doctype.multidoc="Multidoc" type. Intended to be used in context of events and other "multiple document" use cases.
+
+doctype.article-journal=Journal article
+doctype.book=Book
+doctype.report=Report
+doctype.thesis-bachelor=Bachelor thesis
+doctype.thesis-master=Master thesis
+doctype.thesis-phd=PhD thesis
+doctype.thesis-diploma=Diploma thesis
+doctype.talk=Talk (non-conference)
+doctype.conference-abstract=Abstract (conference)
+doctype.conference-poster=Poster (conference)
+doctype.conference-presentation=Presentation (conference)
+doctype.conference-proceedings=Proceedings (conference)
+
+
+
+
