Enable editing of document types for admins.
* Add `addedit.html` as view template
* peerpub.css: added `del` class that stlyes as striked text
* Adding i18n messages for editing doc types
* DocTypeAdminCtrl:
   1. Make constructor rely on all necessary components explictly. Needed for testing and coverage.
   2. Add Attribute HashMap as @ModelAttribute method, so it will always be transfered for convinience
   3. Add request handlers for getting and posting the edit form. Uses the DocTypeService to handle the database access.
   4. Add Spring validator for the DocTypeForm data binding from the form model attribute with @InitBinder.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -11,6 +11,7 @@ brand.author=Forschungszentrum Jülich GmbH
 
 add=Add
 attribute=Attribute
+choose=Choose...
 defaultValue=Default value
 delete=Delete
 description=Description
@@ -19,6 +20,7 @@ edit=Edit
 key=Key
 label=Label
 legend=Legend
+mandatory=Mandatory
 modus=Modus
 name=Name
 
@@ -30,6 +32,7 @@ name=Name
 
 duplicate.name=This name is already in use. Please choose another.
 add.success=Successfully added.
+edit.success=Successfully edited.
 edit.notfound=The item to edit has not been found.
 edit.failed=Updating the item failed.
 delete.success=Successfully deleted.
@@ -51,7 +54,12 @@ delete.confirm.text=This action cannot be undone. If you are sure to delete this
 # ADMIN
 ########################
 
+# General
+admin.help.name=A unique name for reference purposes.
+admin.help.displayName=Readable name displayed in forms, text, etc.
+
 # Metadata attributes
+admin.attributes=Metadata attributes
 admin.attribute.list=Metadata attributes
 admin.attribute.add=New metadata attribute
 admin.attribute.edit=Edit metadata attribute
@@ -61,8 +69,11 @@ admin.attribute.noDefault=No default value set
 
 # Document types
 admin.doctype.list=Document types
+admin.doctype.edit=Edit document type
 admin.doctype.system=System type. Cannot be deleted, only attributes may be edited.
-admin.doctype.multidoc="Multidoc" type. Intended to be used in context of events and other "multiple document" use cases.
+admin.doctype.multidoc=Multi-document capable type. Intended to be used in context of events and other "multiple document" use cases.
+admin.doctype.multiDocCapable=Multi-Document capable?
+admin.doctype.help.multidoc=Activated means capable for "multiple document publications", otherwise single document use only.
 
 doctype.article-journal=Journal article
 doctype.book=Book
