Add rudimentary, static navigation links.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -43,6 +43,17 @@ exception.unknown=Unknown exception hit. Please consult an administrator.
 
 
 ########################
+# MENU
+########################
+
+menu.dashboard=Dashboard
+menu.admin=Admin
+menu.admin.attributes=Metadata attributes
+menu.admin.doctypes=Document types
+
+
+
+########################
 # MODALS
 ########################
 
