Add funding awards. * Database model and repository * Admin Controller to adminstrate them * Unit and integration tests.

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -23,7 +23,8 @@ legend=Legend
 mandatory=Mandatory
 modus=Modus
 name=Name
-
+award=Award
+id=ID
 
 
 ########################
@@ -100,6 +101,9 @@ doctype.conference-poster=Poster (conference)
 doctype.conference-presentation=Presentation (conference)
 doctype.conference-proceedings=Proceedings (conference)
 
-
+# Funding and Awards
+admin.funding.award.add=New funding award
+admin.funding.award.edit=Edit funding award
+admin.funding.award.list=Funding awards
 
 
