Add navigation link to funding award listing

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -51,6 +51,7 @@ menu.dashboard=Dashboard
 menu.admin=Admin
 menu.admin.attributes=Metadata attributes
 menu.admin.doctypes=Document types
+menu.admin.funding.awards=Funding awards
 
 
 
